# libodbcmysql

./: ChangeLog  Makefile.am  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libodbcmysql.spec.in
docs/migration/: mysql-to-postgresql.md
dpkg/: changelog.in  control  copyright
include/: Makefile.am  libodbcmysql.h.in
jhhbuild/include/: libodbcmysql.h
jhhbuild/lib/: libodbcmysql.so.1  libodbcmysql.so.1.0.0
jhhbuild/lib/pkgconfig/: libodbcmysql.pc
libodbcmysql/: Makefile.am  libodbcmysql.c  libodbcmysql.rc.in  my_init.c  mysql_affected_rows.c  mysql_autocommit.c  mysql_change_user.c  mysql_character_set_name.c  mysql_client_find_plugin.c  mysql_client_register_plugin.c  mysql_close.c  mysql_commit.c  mysql_connect.c  mysql_create_db.c  mysql_data_seek.c  mysql_debug.c  mysql_drop_db.c  mysql_dump_debug_info.c  mysql_embedded.c  mysql_eof.c  mysql_errno.c  mysql_error.c  mysql_escape_string.c  mysql_fetch_field.c  mysql_fetch_field_direct.c  mysql_fetch_fields.c  mysql_fetch_lengths.c  mysql_fetch_row.c  mysql_field_count.c  mysql_field_seek.c  mysql_field_tell.c  mysql_free_result.c  mysql_get_character_set_info.c  mysql_get_charset_by_name.c  mysql_get_charset_by_nr.c  mysql_get_client_info.c  mysql_get_client_version.c  mysql_get_host_info.c  mysql_get_option.c  mysql_get_optionv.c  (+96 more)
